--- a/src/stylesheets/utils/_variables.scss
+++ b/src/stylesheets/utils/_variables.scss
@@ -11,9 +11,12 @@ $pc: 1000px;
 // COLORS //
 
 $colorBody: #2e2e2e;
-$colorHeader: #59c4ca;
+// $colorHeader: #59c4ca;
+$colorHeader: #07f9a8;
+$colorHeaderFonts: #109e6f;
 $colorProjects: #32e0ea;
 $colorAbout: #ce3635;
 $colorCv: #4F9B5A;
 $colorContact: #adabab;
 $colorBright: #f2f1c6;
+$colorScroll: rgba(255, 255, 255, 0.7);
