--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -53,6 +53,6 @@ a {
   }
 }
 
-.Menu__links {
-  background: url("https://mgarvia.github.io/portfolio/images/bg-menu.jpeg") center no-repeat;
-}
+// .Menu__links {
+//   background: url("https://mgarvia.github.io/portfolio/images/bg-menu.jpeg") center no-repeat;
+// }
