--- a/src/stylesheets/Menu.scss
+++ b/src/stylesheets/Menu.scss
@@ -152,7 +152,7 @@
   }
 
   &__links {
-    background: url("/images/bg-menu.png") center no-repeat;
+    // background: url("./images/bg-menu.png") center no-repeat;
     background-size: cover;
     height: 100vh;
     width: 100vw;
