--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -3,7 +3,7 @@
 
 .Header {
   &__content {
-    background: url("/images/bg-header.png")
+    background: url("https://mgarvia.github.io/portfolio/images/bg-header.png")
     // ("https://mgarvia.github.io/portfolio/images/bg-header.jpeg")
       // center 
       no-repeat;
